reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,командлет
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/07/2020
ms.locfileid: "93230765"
---
# <span data-ttu-id="6b839-103">Модуль Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="6b839-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="6b839-104">Описание</span><span class="sxs-lookup"><span data-stu-id="6b839-104">Description</span></span>

<span data-ttu-id="6b839-105">В этом разделе содержатся разделы справки по командлетам, которые устанавливаются вместе с модулем Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="6b839-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="6b839-106">Этот модуль содержит командлеты, управляющие основными функциями PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="6b839-107">Командлеты Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="6b839-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="6b839-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="6b839-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="6b839-109">Добавляет пользовательские свойства и методы в экземпляр объекта PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="6b839-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="6b839-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="6b839-111">Добавляет класс Microsoft .NET Framework в сеанс PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="6b839-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="6b839-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="6b839-113">Удаляет значение переменной.</span><span class="sxs-lookup"><span data-stu-id="6b839-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="6b839-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="6b839-115">Сравнивает два набора объектов.</span><span class="sxs-lookup"><span data-stu-id="6b839-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="6b839-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="6b839-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="6b839-117">Форматирует строку в соответствии с примерами.</span><span class="sxs-lookup"><span data-stu-id="6b839-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="6b839-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="6b839-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="6b839-119">Преобразует свойства объектов в формате с разделителями-запятыми (CSV) в версии CSV исходных объектов.</span><span class="sxs-lookup"><span data-stu-id="6b839-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="6b839-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="6b839-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="6b839-121">Преобразует строку в формате JSON в пользовательский объект.</span><span class="sxs-lookup"><span data-stu-id="6b839-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="6b839-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="6b839-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="6b839-123">Преобразует строку SDDL в пользовательский объект.</span><span class="sxs-lookup"><span data-stu-id="6b839-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="6b839-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="6b839-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="6b839-125">Извлекает и анализирует структурированные свойства из содержимого строки.</span><span class="sxs-lookup"><span data-stu-id="6b839-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="6b839-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="6b839-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="6b839-127">Преобразует строку, содержащую одну или несколько пар типа ключ-значение в хэш-таблицу.</span><span class="sxs-lookup"><span data-stu-id="6b839-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="6b839-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="6b839-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="6b839-129">Преобразует объекты .NET в последовательность строк значений с разделителями-запятыми (CSV).</span><span class="sxs-lookup"><span data-stu-id="6b839-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="6b839-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="6b839-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="6b839-131">Преобразует объекты .NET в код HTML, который может отображаться в веб-браузере.</span><span class="sxs-lookup"><span data-stu-id="6b839-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="6b839-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="6b839-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="6b839-133">Преобразует объект в строку в формате JSON.</span><span class="sxs-lookup"><span data-stu-id="6b839-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="6b839-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="6b839-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="6b839-135">Создает XML-представление объекта.</span><span class="sxs-lookup"><span data-stu-id="6b839-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="6b839-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="6b839-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="6b839-137">Запускает интерактивный сеанс отладки с пространством выполнения.</span><span class="sxs-lookup"><span data-stu-id="6b839-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="6b839-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="6b839-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="6b839-139">Отключает точки останова в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="6b839-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="6b839-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="6b839-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="6b839-141">Отключает отладку в одном или нескольких пространствах выполнения и освобождает все ожидающие завершения отладчика.</span><span class="sxs-lookup"><span data-stu-id="6b839-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="6b839-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="6b839-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="6b839-143">Включает точки останова в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="6b839-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="6b839-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="6b839-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="6b839-145">Включает отладку в пространствах выполнения, где любая точка останова сохраняется до тех пор, пока не будет присоединен отладчик.</span><span class="sxs-lookup"><span data-stu-id="6b839-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="6b839-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="6b839-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="6b839-147">Экспортирует сведения об определенных на текущий момент псевдонимах в файл.</span><span class="sxs-lookup"><span data-stu-id="6b839-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="6b839-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="6b839-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="6b839-149">Создает XML-представление объекта или объектов и сохраняет его в файл.</span><span class="sxs-lookup"><span data-stu-id="6b839-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="6b839-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="6b839-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="6b839-151">Преобразует объекты в последовательность строк с разделителями-запятыми (CSV) и сохраняет строки в файл.</span><span class="sxs-lookup"><span data-stu-id="6b839-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="6b839-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="6b839-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="6b839-153">Сохраняет данные форматирования текущего сеанса в файле форматирования.</span><span class="sxs-lookup"><span data-stu-id="6b839-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="6b839-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="6b839-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="6b839-155">Экспортирует команды из другого сеанса и сохраняет их в модуле PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="6b839-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="6b839-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="6b839-157">Использует пользовательское представление для форматирования выходных данных.</span><span class="sxs-lookup"><span data-stu-id="6b839-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="6b839-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="6b839-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="6b839-159">Отображает файл или другие входные данные в шестнадцатеричном формате.</span><span class="sxs-lookup"><span data-stu-id="6b839-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="6b839-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="6b839-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="6b839-161">Форматирует вывод как список свойств, в котором каждое свойство отображается на новой строке.</span><span class="sxs-lookup"><span data-stu-id="6b839-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="6b839-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="6b839-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="6b839-163">Форматирует выходные данные в виде таблицы.</span><span class="sxs-lookup"><span data-stu-id="6b839-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="6b839-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="6b839-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="6b839-165">Форматирует объекты в виде широкой таблицы, в которой отображается только одно свойство каждого объекта.</span><span class="sxs-lookup"><span data-stu-id="6b839-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="6b839-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="6b839-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="6b839-167">Получает псевдонимы, действительные в ходе текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="6b839-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="6b839-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="6b839-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="6b839-169">Получает текущий язык и региональные параметры, установленные в операционной системе.</span><span class="sxs-lookup"><span data-stu-id="6b839-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="6b839-170">Get-Дата</span><span class="sxs-lookup"><span data-stu-id="6b839-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="6b839-171">Получает текущую дату и время.</span><span class="sxs-lookup"><span data-stu-id="6b839-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="6b839-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="6b839-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="6b839-173">Получает события из очереди событий.</span><span class="sxs-lookup"><span data-stu-id="6b839-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="6b839-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="6b839-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="6b839-175">Получает подписчики на событие в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="6b839-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="6b839-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="6b839-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="6b839-177">Вычисляет хэш-значение для файла с помощью указанного хэш-алгоритма.</span><span class="sxs-lookup"><span data-stu-id="6b839-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="6b839-178">Get-FormatData;</span><span class="sxs-lookup"><span data-stu-id="6b839-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="6b839-179">Получает данные форматирования в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="6b839-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="6b839-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="6b839-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="6b839-181">Получает объект, представляющий текущую основную программу.</span><span class="sxs-lookup"><span data-stu-id="6b839-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="6b839-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="6b839-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="6b839-183">Получает свойства и методы объектов.</span><span class="sxs-lookup"><span data-stu-id="6b839-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="6b839-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="6b839-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="6b839-185">Возвращает точки останова, установленные в рамках текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="6b839-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="6b839-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="6b839-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="6b839-187">Отображает текущий стек вызовов.</span><span class="sxs-lookup"><span data-stu-id="6b839-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="6b839-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="6b839-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="6b839-189">Возвращает случайное число или случайным образом выбирает объекты из коллекции.</span><span class="sxs-lookup"><span data-stu-id="6b839-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="6b839-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="6b839-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="6b839-191">Возвращает активные пространства выполнения в хост-процессе PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="6b839-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="6b839-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="6b839-193">Показывает параметры отладки пространства выполнения.</span><span class="sxs-lookup"><span data-stu-id="6b839-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="6b839-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="6b839-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="6b839-195">Возвращает компоненты PowerShell, инструментированные для трассировки.</span><span class="sxs-lookup"><span data-stu-id="6b839-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="6b839-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="6b839-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="6b839-197">Получает данные расширенного типа в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="6b839-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="6b839-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="6b839-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="6b839-199">Возвращает текущие параметры языка и региональных параметров пользовательского интерфейса в операционной системе.</span><span class="sxs-lookup"><span data-stu-id="6b839-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="6b839-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="6b839-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="6b839-201">Возвращает уникальные элементы из сортированного списка.</span><span class="sxs-lookup"><span data-stu-id="6b839-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="6b839-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="6b839-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="6b839-203">Получает переменные в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="6b839-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="6b839-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="6b839-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="6b839-205">Получает утвержденные команды PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="6b839-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="6b839-207">Группирует объекты, в которых указанные свойства имеют одно и то же значение.</span><span class="sxs-lookup"><span data-stu-id="6b839-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="6b839-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="6b839-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="6b839-209">Импортирует список псевдонимов из файла.</span><span class="sxs-lookup"><span data-stu-id="6b839-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="6b839-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="6b839-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="6b839-211">Импортирует файл CLIXML и создает соответствующие объекты в PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="6b839-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="6b839-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="6b839-213">Создает пользовательские объекты, подобные табличным, из элементов в файле с разделителями-запятыми (CSV).</span><span class="sxs-lookup"><span data-stu-id="6b839-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="6b839-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="6b839-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="6b839-215">Импортирует данные, зависящие от языка, в сценарии и функции в зависимости от языка и региональных параметров пользовательского интерфейса, выбранного для операционной системы.</span><span class="sxs-lookup"><span data-stu-id="6b839-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="6b839-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="6b839-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="6b839-217">Импортирует значения из. PSD1 файл без вызова его содержимого</span><span class="sxs-lookup"><span data-stu-id="6b839-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="6b839-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="6b839-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="6b839-219">Импортирует команды из другого сеанса в текущий.</span><span class="sxs-lookup"><span data-stu-id="6b839-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="6b839-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="6b839-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="6b839-221">Выполняет команды или выражения на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="6b839-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="6b839-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="6b839-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="6b839-223">Отправляет запрос HTTP или HTTPS в веб-службу RESTful.</span><span class="sxs-lookup"><span data-stu-id="6b839-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="6b839-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="6b839-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="6b839-225">Получает содержимое с веб-страницы в Интернете.</span><span class="sxs-lookup"><span data-stu-id="6b839-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="6b839-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="6b839-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="6b839-227">Измеряет время выполнения блоков скриптов и командлетов.</span><span class="sxs-lookup"><span data-stu-id="6b839-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="6b839-228">Measure-Object;</span><span class="sxs-lookup"><span data-stu-id="6b839-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="6b839-229">Рассчитывает числовые свойства объектов, а также количество знаков, слов и строк в строковых объектах, например в текстовых файлах.</span><span class="sxs-lookup"><span data-stu-id="6b839-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="6b839-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="6b839-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="6b839-231">Создает новый псевдоним.</span><span class="sxs-lookup"><span data-stu-id="6b839-231">Creates a new alias.</span></span>

### [<span data-ttu-id="6b839-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="6b839-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="6b839-233">Создает новое событие.</span><span class="sxs-lookup"><span data-stu-id="6b839-233">Creates a new event.</span></span>

### [<span data-ttu-id="6b839-234">New-GUID</span><span class="sxs-lookup"><span data-stu-id="6b839-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="6b839-235">Создает глобальный уникальный идентификатор (GUID).</span><span class="sxs-lookup"><span data-stu-id="6b839-235">Creates a GUID.</span></span>

### [<span data-ttu-id="6b839-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="6b839-237">Создает экземпляр объекта Microsoft .NET Framework или COM.</span><span class="sxs-lookup"><span data-stu-id="6b839-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="6b839-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="6b839-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="6b839-239">Создает временный файл.</span><span class="sxs-lookup"><span data-stu-id="6b839-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="6b839-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="6b839-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="6b839-241">Создает объект TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="6b839-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="6b839-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="6b839-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="6b839-243">Создает новую переменную.</span><span class="sxs-lookup"><span data-stu-id="6b839-243">Creates a new variable.</span></span>

### [<span data-ttu-id="6b839-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="6b839-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="6b839-245">Отправляет выходные данные в файл.</span><span class="sxs-lookup"><span data-stu-id="6b839-245">Sends output to a file.</span></span>

### [<span data-ttu-id="6b839-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="6b839-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="6b839-247">Отправляет выходные данные в интерактивную таблицу в отдельном окне.</span><span class="sxs-lookup"><span data-stu-id="6b839-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="6b839-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="6b839-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="6b839-249">Отправляет выходные данные на принтер.</span><span class="sxs-lookup"><span data-stu-id="6b839-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="6b839-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="6b839-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="6b839-251">Выводит входные объекты в виде строк.</span><span class="sxs-lookup"><span data-stu-id="6b839-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="6b839-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="6b839-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="6b839-253">Считывает строку ввода из консоли.</span><span class="sxs-lookup"><span data-stu-id="6b839-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="6b839-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="6b839-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="6b839-255">Подписывается на события, созданные подсистемой PowerShell и `New-Event` командлетом.</span><span class="sxs-lookup"><span data-stu-id="6b839-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="6b839-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="6b839-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="6b839-257">Подписывается на события, создаваемые объектом Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="6b839-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="6b839-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="6b839-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="6b839-259">Удаляет события из очереди событий.</span><span class="sxs-lookup"><span data-stu-id="6b839-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="6b839-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="6b839-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="6b839-261">Удаляет из текущей консоли точки останова.</span><span class="sxs-lookup"><span data-stu-id="6b839-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="6b839-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="6b839-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="6b839-263">Удаляет расширенные типы из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="6b839-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="6b839-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="6b839-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="6b839-265">Удаляет переменную и ее значение.</span><span class="sxs-lookup"><span data-stu-id="6b839-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="6b839-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="6b839-267">Выбирает объекты или свойства объектов.</span><span class="sxs-lookup"><span data-stu-id="6b839-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="6b839-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="6b839-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="6b839-269">Выполняет поиск текста в строках и файлах.</span><span class="sxs-lookup"><span data-stu-id="6b839-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="6b839-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="6b839-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="6b839-271">Выполняет поиск текста в XML-строке или документе.</span><span class="sxs-lookup"><span data-stu-id="6b839-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="6b839-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="6b839-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="6b839-273">Отправляет сообщение электронной почты.</span><span class="sxs-lookup"><span data-stu-id="6b839-273">Sends an email message.</span></span>

### [<span data-ttu-id="6b839-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="6b839-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="6b839-275">Создает или изменяет псевдоним для командлета или другой команды в текущем сеансе PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="6b839-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="6b839-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="6b839-277">Меняет системное время компьютера на указанное.</span><span class="sxs-lookup"><span data-stu-id="6b839-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="6b839-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="6b839-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="6b839-279">Устанавливает точку останова на строке, команде или переменной.</span><span class="sxs-lookup"><span data-stu-id="6b839-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="6b839-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="6b839-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="6b839-281">Настраивает, запускает и останавливает трассировку компонентов PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="6b839-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="6b839-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="6b839-283">Задает значение переменной.</span><span class="sxs-lookup"><span data-stu-id="6b839-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="6b839-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="6b839-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="6b839-285">Отображает сведения о команде PowerShell в графическом окне.</span><span class="sxs-lookup"><span data-stu-id="6b839-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="6b839-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="6b839-287">Сортирует объекты по значениям свойств.</span><span class="sxs-lookup"><span data-stu-id="6b839-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="6b839-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="6b839-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="6b839-289">Приостанавливает действие в скрипте или сеансе на указанное время.</span><span class="sxs-lookup"><span data-stu-id="6b839-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="6b839-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="6b839-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="6b839-291">Сохраняет выходные данные команды в файле или переменной, а также отправляет их в конвейер.</span><span class="sxs-lookup"><span data-stu-id="6b839-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="6b839-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="6b839-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="6b839-293">Настраивает и запускает трассировку указанного выражения или команды.</span><span class="sxs-lookup"><span data-stu-id="6b839-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="6b839-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="6b839-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="6b839-295">Разблокирует файлы, скачанные из Интернета.</span><span class="sxs-lookup"><span data-stu-id="6b839-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="6b839-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="6b839-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="6b839-297">Отменяет подписку на событие.</span><span class="sxs-lookup"><span data-stu-id="6b839-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="6b839-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="6b839-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="6b839-299">Обновляет данные форматирования в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="6b839-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="6b839-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="6b839-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="6b839-301">Добавляет и удаляет элементы из значении свойства, содержащего коллекцию объектов.</span><span class="sxs-lookup"><span data-stu-id="6b839-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="6b839-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="6b839-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="6b839-303">Обновляет данные расширенного типа во время сеанса.</span><span class="sxs-lookup"><span data-stu-id="6b839-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="6b839-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="6b839-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="6b839-305">Останавливает скрипт в отладчике перед выполнением следующего оператора в скрипте.</span><span class="sxs-lookup"><span data-stu-id="6b839-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="6b839-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="6b839-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="6b839-307">Ожидает определенное событие, прежде чем продолжить выполнение.</span><span class="sxs-lookup"><span data-stu-id="6b839-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="6b839-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="6b839-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="6b839-309">Выводит сообщение отладки на консоль.</span><span class="sxs-lookup"><span data-stu-id="6b839-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="6b839-310">Ошибка записи</span><span class="sxs-lookup"><span data-stu-id="6b839-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="6b839-311">Записывает объект в поток ошибок.</span><span class="sxs-lookup"><span data-stu-id="6b839-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="6b839-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="6b839-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="6b839-313">Записывает пользовательские выходные данные в узел.</span><span class="sxs-lookup"><span data-stu-id="6b839-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="6b839-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="6b839-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="6b839-315">Указывает, как PowerShell обрабатывает данные информационного потока для команды.</span><span class="sxs-lookup"><span data-stu-id="6b839-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="6b839-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="6b839-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="6b839-317">Отправляет указанные объекты в следующую команду по конвейеру.</span><span class="sxs-lookup"><span data-stu-id="6b839-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="6b839-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="6b839-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="6b839-319">Отображает индикатор выполнения в командном окне PowerShell.</span><span class="sxs-lookup"><span data-stu-id="6b839-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="6b839-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="6b839-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="6b839-321">Записывает текст в поток подробных сообщений.</span><span class="sxs-lookup"><span data-stu-id="6b839-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="6b839-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="6b839-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="6b839-323">Записывает предупреждающее сообщение.</span><span class="sxs-lookup"><span data-stu-id="6b839-323">Writes a warning message.</span></span>
