reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,командлет
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/07/2020
ms.locfileid: "93230866"
---
# <span data-ttu-id="3d2e4-103">Модуль Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="3d2e4-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="3d2e4-104">Описание</span><span class="sxs-lookup"><span data-stu-id="3d2e4-104">Description</span></span>

<span data-ttu-id="3d2e4-105">В этом разделе содержатся разделы справки по командлетам, которые устанавливаются вместе с модулем Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="3d2e4-106">Этот модуль содержит командлеты, управляющие основными функциями PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="3d2e4-107">Командлеты Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="3d2e4-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="3d2e4-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="3d2e4-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="3d2e4-109">Добавляет пользовательские свойства и методы в экземпляр объекта PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="3d2e4-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="3d2e4-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="3d2e4-111">Добавляет класс Microsoft .NET Core в сеанс PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="3d2e4-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="3d2e4-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="3d2e4-113">Удаляет значение переменной.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="3d2e4-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="3d2e4-115">Сравнивает два набора объектов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="3d2e4-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="3d2e4-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="3d2e4-117">Преобразует свойства объектов в формате с разделителями-запятыми (CSV) в версии CSV исходных объектов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="3d2e4-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="3d2e4-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="3d2e4-119">Преобразует строку в формате JSON в пользовательский объект или хэш-таблицу.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="3d2e4-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="3d2e4-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="3d2e4-121">Преобразование содержимого строки или файла в объект **маркдовнинфо** .</span><span class="sxs-lookup"><span data-stu-id="3d2e4-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="3d2e4-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="3d2e4-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="3d2e4-123">Преобразует строку SDDL в пользовательский объект.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="3d2e4-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="3d2e4-125">Преобразует строку, содержащую одну или несколько пар типа ключ-значение в хэш-таблицу.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="3d2e4-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="3d2e4-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="3d2e4-127">Преобразует объекты .NET в последовательность строк значений, разделенных символами (CSV).</span><span class="sxs-lookup"><span data-stu-id="3d2e4-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="3d2e4-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="3d2e4-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="3d2e4-129">Преобразует объекты .NET в код HTML, который может отображаться в веб-браузере.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="3d2e4-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="3d2e4-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="3d2e4-131">Преобразует объект в строку в формате JSON.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="3d2e4-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="3d2e4-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="3d2e4-133">Создает XML-представление объекта.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="3d2e4-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="3d2e4-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="3d2e4-135">Запускает интерактивный сеанс отладки с пространством выполнения.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="3d2e4-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="3d2e4-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="3d2e4-137">Отключает точки останова в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="3d2e4-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="3d2e4-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="3d2e4-139">Отключает отладку в одном или нескольких пространствах выполнения и освобождает все ожидающие завершения отладчика.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="3d2e4-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="3d2e4-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="3d2e4-141">Включает точки останова в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="3d2e4-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="3d2e4-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="3d2e4-143">Включает отладку в пространствах выполнения, где любая точка останова сохраняется до тех пор, пока не будет присоединен отладчик.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="3d2e4-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="3d2e4-145">Экспортирует сведения об определенных на текущий момент псевдонимах в файл.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="3d2e4-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="3d2e4-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="3d2e4-147">Создает XML-представление объекта или объектов и сохраняет его в файл.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="3d2e4-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="3d2e4-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="3d2e4-149">Преобразует объекты в последовательность строк с разделителями-запятыми (CSV) и сохраняет строки в файл.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="3d2e4-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="3d2e4-151">Сохраняет данные форматирования текущего сеанса в файле форматирования.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="3d2e4-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="3d2e4-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="3d2e4-153">Экспортирует команды из другого сеанса и сохраняет их в модуле PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="3d2e4-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="3d2e4-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="3d2e4-155">Использует пользовательское представление для форматирования выходных данных.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="3d2e4-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="3d2e4-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="3d2e4-157">Отображает файл или другие входные данные в шестнадцатеричном формате.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="3d2e4-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="3d2e4-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="3d2e4-159">Форматирует вывод как список свойств, в котором каждое свойство отображается на новой строке.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="3d2e4-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="3d2e4-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="3d2e4-161">Форматирует выходные данные в виде таблицы.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="3d2e4-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="3d2e4-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="3d2e4-163">Форматирует объекты в виде широкой таблицы, в которой отображается только одно свойство каждого объекта.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="3d2e4-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="3d2e4-165">Получает псевдонимы, действительные в ходе текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="3d2e4-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="3d2e4-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="3d2e4-167">Получает текущий язык и региональные параметры, установленные в операционной системе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="3d2e4-168">Get-Дата</span><span class="sxs-lookup"><span data-stu-id="3d2e4-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="3d2e4-169">Получает текущую дату и время.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="3d2e4-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="3d2e4-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="3d2e4-171">Возвращает и отображает последние сообщения об ошибках из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="3d2e4-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="3d2e4-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="3d2e4-173">Получает события из очереди событий.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="3d2e4-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="3d2e4-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="3d2e4-175">Получает подписчики на событие в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="3d2e4-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="3d2e4-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="3d2e4-177">Вычисляет хэш-значение для файла с помощью указанного хэш-алгоритма.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="3d2e4-178">Get-FormatData;</span><span class="sxs-lookup"><span data-stu-id="3d2e4-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="3d2e4-179">Получает данные форматирования в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="3d2e4-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="3d2e4-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="3d2e4-181">Получает объект, представляющий текущую основную программу.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="3d2e4-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="3d2e4-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="3d2e4-183">Возвращает текущие цвета и стили, используемые для отрисовки содержимого Markdown в консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="3d2e4-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="3d2e4-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="3d2e4-185">Получает свойства и методы объектов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="3d2e4-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="3d2e4-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="3d2e4-187">Возвращает точки останова, установленные в рамках текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="3d2e4-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="3d2e4-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="3d2e4-189">Отображает текущий стек вызовов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="3d2e4-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="3d2e4-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="3d2e4-191">Возвращает случайное число или случайным образом выбирает объекты из коллекции.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="3d2e4-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="3d2e4-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="3d2e4-193">Возвращает активные пространства выполнения в хост-процессе PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="3d2e4-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="3d2e4-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="3d2e4-195">Показывает параметры отладки пространства выполнения.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="3d2e4-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="3d2e4-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="3d2e4-197">Возвращает компоненты PowerShell, инструментированные для трассировки.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="3d2e4-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="3d2e4-199">Получает данные расширенного типа в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="3d2e4-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="3d2e4-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="3d2e4-201">Возвращает текущие параметры языка и региональных параметров пользовательского интерфейса в операционной системе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="3d2e4-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="3d2e4-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="3d2e4-203">Возвращает уникальные элементы из сортированного списка.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="3d2e4-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="3d2e4-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="3d2e4-205">Получение **временного интервала** с момента последней загрузки.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="3d2e4-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="3d2e4-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="3d2e4-207">Получает переменные в текущей консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="3d2e4-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="3d2e4-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="3d2e4-209">Получает утвержденные команды PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="3d2e4-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="3d2e4-211">Группирует объекты, в которых указанные свойства имеют одно и то же значение.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="3d2e4-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="3d2e4-213">Импортирует список псевдонимов из файла.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="3d2e4-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="3d2e4-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="3d2e4-215">Импортирует файл CLIXML и создает соответствующие объекты в PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="3d2e4-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="3d2e4-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="3d2e4-217">Создает пользовательские объекты, подобные табличным, из элементов в файле с разделителями-запятыми (CSV).</span><span class="sxs-lookup"><span data-stu-id="3d2e4-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="3d2e4-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="3d2e4-219">Импортирует данные, зависящие от языка, в сценарии и функции в зависимости от языка и региональных параметров пользовательского интерфейса, выбранного для операционной системы.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="3d2e4-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="3d2e4-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="3d2e4-221">Импортирует значения из `.PSD1` файла без вызова его содержимого.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="3d2e4-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="3d2e4-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="3d2e4-223">Импортирует команды из другого сеанса в текущий.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="3d2e4-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="3d2e4-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="3d2e4-225">Выполняет команды или выражения на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="3d2e4-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="3d2e4-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="3d2e4-227">Отправляет запрос HTTP или HTTPS в веб-службу RESTful.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="3d2e4-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="3d2e4-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="3d2e4-229">Получает содержимое с веб-страницы в Интернете.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="3d2e4-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="3d2e4-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="3d2e4-231">Объединяет объекты из конвейера в одну строку.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="3d2e4-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="3d2e4-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="3d2e4-233">Измеряет время выполнения блоков скриптов и командлетов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="3d2e4-234">Measure-Object;</span><span class="sxs-lookup"><span data-stu-id="3d2e4-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="3d2e4-235">Рассчитывает числовые свойства объектов, а также количество знаков, слов и строк в строковых объектах, например в текстовых файлах.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="3d2e4-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="3d2e4-237">Создает новый псевдоним.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-237">Creates a new alias.</span></span>

### [<span data-ttu-id="3d2e4-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="3d2e4-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="3d2e4-239">Создает новое событие.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-239">Creates a new event.</span></span>

### [<span data-ttu-id="3d2e4-240">New-GUID</span><span class="sxs-lookup"><span data-stu-id="3d2e4-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="3d2e4-241">Создает глобальный уникальный идентификатор (GUID).</span><span class="sxs-lookup"><span data-stu-id="3d2e4-241">Creates a GUID.</span></span>

### [<span data-ttu-id="3d2e4-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="3d2e4-243">Создает экземпляр объекта Microsoft .NET Framework или COM.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="3d2e4-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="3d2e4-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="3d2e4-245">Создает временный файл.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="3d2e4-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="3d2e4-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="3d2e4-247">Создает объект TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="3d2e4-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="3d2e4-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="3d2e4-249">Создает новую переменную.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-249">Creates a new variable.</span></span>

### [<span data-ttu-id="3d2e4-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="3d2e4-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="3d2e4-251">Отправляет выходные данные в файл.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-251">Sends output to a file.</span></span>

### [<span data-ttu-id="3d2e4-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="3d2e4-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="3d2e4-253">Отправляет выходные данные в интерактивную таблицу в отдельном окне.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="3d2e4-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="3d2e4-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="3d2e4-255">Отправляет выходные данные на принтер.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="3d2e4-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="3d2e4-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="3d2e4-257">Выводит входные объекты в виде строк.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="3d2e4-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="3d2e4-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="3d2e4-259">Считывает строку ввода из консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="3d2e4-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="3d2e4-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="3d2e4-261">Подписывается на события, созданные подсистемой PowerShell и `New-Event` командлетом.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="3d2e4-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="3d2e4-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="3d2e4-263">Подписывается на события, создаваемые объектом Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="3d2e4-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="3d2e4-265">Удаление псевдонима из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="3d2e4-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="3d2e4-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="3d2e4-267">Удаляет события из очереди событий.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="3d2e4-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="3d2e4-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="3d2e4-269">Удаляет из текущей консоли точки останова.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="3d2e4-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="3d2e4-271">Удаляет расширенные типы из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="3d2e4-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="3d2e4-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="3d2e4-273">Удаляет переменную и ее значение.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="3d2e4-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="3d2e4-275">Выбирает объекты или свойства объектов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="3d2e4-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="3d2e4-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="3d2e4-277">Выполняет поиск текста в строках и файлах.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="3d2e4-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="3d2e4-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="3d2e4-279">Выполняет поиск текста в XML-строке или документе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="3d2e4-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="3d2e4-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="3d2e4-281">Отправляет сообщение электронной почты.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-281">Sends an email message.</span></span>

### [<span data-ttu-id="3d2e4-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="3d2e4-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="3d2e4-283">Создает или изменяет псевдоним для командлета или другой команды в текущем сеансе PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="3d2e4-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="3d2e4-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="3d2e4-285">Меняет системное время компьютера на указанное.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="3d2e4-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="3d2e4-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="3d2e4-287">Задает цвета и стили, используемые для отрисовки содержимого Markdown в консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="3d2e4-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="3d2e4-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="3d2e4-289">Устанавливает точку останова на строке, команде или переменной.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="3d2e4-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="3d2e4-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="3d2e4-291">Настраивает, запускает и останавливает трассировку компонентов PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="3d2e4-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="3d2e4-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="3d2e4-293">Задает значение переменной.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-293">Sets the value of a variable.</span></span> <span data-ttu-id="3d2e4-294">Создает переменную, если переменной с запрошенным именем не существует.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="3d2e4-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="3d2e4-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="3d2e4-296">Отображает сведения о команде PowerShell в графическом окне.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="3d2e4-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="3d2e4-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="3d2e4-298">Показывает Markdown файл или строку в консоли с помощью escape-последовательностей VT100 или в браузере, использующем HTML.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="3d2e4-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="3d2e4-300">Сортирует объекты по значениям свойств.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="3d2e4-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="3d2e4-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="3d2e4-302">Приостанавливает действие в скрипте или сеансе на указанное время.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="3d2e4-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="3d2e4-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="3d2e4-304">Сохраняет выходные данные команды в файле или переменной, а также отправляет их в конвейер.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="3d2e4-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="3d2e4-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="3d2e4-306">Проверяет, является ли строка допустимым документом JSON</span><span class="sxs-lookup"><span data-stu-id="3d2e4-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="3d2e4-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="3d2e4-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="3d2e4-308">Настраивает и запускает трассировку указанного выражения или команды.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="3d2e4-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="3d2e4-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="3d2e4-310">Разблокирует файлы, скачанные из Интернета.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="3d2e4-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="3d2e4-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="3d2e4-312">Отменяет подписку на событие.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="3d2e4-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="3d2e4-314">Обновляет данные форматирования в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="3d2e4-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="3d2e4-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="3d2e4-316">Добавляет и удаляет элементы из значении свойства, содержащего коллекцию объектов.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="3d2e4-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="3d2e4-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="3d2e4-318">Обновляет данные расширенного типа во время сеанса.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="3d2e4-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="3d2e4-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="3d2e4-320">Останавливает скрипт в отладчике перед выполнением следующего оператора в скрипте.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="3d2e4-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="3d2e4-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="3d2e4-322">Ожидает определенное событие, прежде чем продолжить выполнение.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="3d2e4-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="3d2e4-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="3d2e4-324">Выводит сообщение отладки на консоль.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="3d2e4-325">Ошибка записи</span><span class="sxs-lookup"><span data-stu-id="3d2e4-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="3d2e4-326">Записывает объект в поток ошибок.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="3d2e4-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="3d2e4-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="3d2e4-328">Записывает пользовательские выходные данные в узел.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="3d2e4-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="3d2e4-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="3d2e4-330">Указывает, как PowerShell обрабатывает данные информационного потока для команды.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="3d2e4-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="3d2e4-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="3d2e4-332">Отправляет указанные объекты в следующую команду по конвейеру.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="3d2e4-333">Если команда является последней в конвейере, объекты отображаются в консоли.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="3d2e4-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="3d2e4-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="3d2e4-335">Отображает индикатор выполнения в командном окне PowerShell.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="3d2e4-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="3d2e4-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="3d2e4-337">Записывает текст в поток подробных сообщений.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="3d2e4-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="3d2e4-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="3d2e4-339">Записывает предупреждающее сообщение.</span><span class="sxs-lookup"><span data-stu-id="3d2e4-339">Writes a warning message.</span></span>
